Fix navbar and toolbar alignment

--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -10,13 +10,13 @@
 	#navbar-inner {
 		.row {
 			margin: auto;
-			width: 95%;
+			width: 100%;
 		}
 		.col-30 {
-			width: 30%;
+			width: 25%;
 		}
 		.col-40 {
-			width: 35%;
+			width: 40%;
 		}
 		.center {
 			display: block;
