--- a/src/scss/_partials/_toolbar.scss
+++ b/src/scss/_partials/_toolbar.scss
@@ -1,5 +1,6 @@
 .toolbar {
 	background: none;
+	overflow-y: scroll;
 	position: fixed !important;
 	padding: 30px 0;
 
